Fix css in journal-list so that the text doesn't overflow

--- a/client/src/app/journaling/journal-list.component.css
+++ b/client/src/app/journaling/journal-list.component.css
@@ -54,3 +54,19 @@
 #addNewJournal{
     background-color: lightcyan;
 }
+
+#journalTitleDiv{
+    width: 200px;
+    height: 22px;
+    word-break: break-all;
+    overflow: hidden;
+}
+
+#journalBodyDiv{
+    width: 200px;
+    height: 90px;
+    word-break: break-all;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    padding-bottom: 4px;
+}
